update Dev_launchers script for run command like sass, Browser sync version linux.sh and windows.bat

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <div class="grid7"></div>
             <div class="grid8"></div>
 
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit commodi dignissimos perferendis, sunt quis facere nemo, repellendus, officiis odio molestias quo iusto fuga suscipit, voluptatibus pariatur beatae provident consectetur quos.</p>
+            <p>Quae quia, ab, error enim hic perspiciatis nobis. Dolor dolore nostrum ad laboriosam, non error illo iure autem cum amet earum nisi hic, expedita sequi quisquam magnam. Tenetur, molestias, quod.</p>
 
 </body>
 </html>
